fix gaps for desktop

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,7 +29,7 @@ button:hover, button:focus {
 }
   
 
-@media screen and (min-width: 768px) and (max-width: 1360px) {
+@media screen and (min-width: 768px) and (max-width: 1300px) {
   body {
     background-color: lightblue;
   }
