--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -70,7 +70,7 @@
   justify-content: space-between;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1360px) {
+@media screen and (min-width: 768px) and (max-width: 1364px) {
   .header__buttons {
     display: flex;
     justify-content: center;
@@ -82,13 +82,14 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 1rem;
+    row-gap: 1rem;
+    column-gap: 1rem;
     justify-content: center;
   }
 }
 
 
-@media screen and (min-width: 1360px) {
+@media screen and (min-width: 1364px) {
 
     .header__buttons {
         display: flex;
@@ -96,11 +97,17 @@
         gap: 1.5rem;
       }
     .main {
-      padding: 0;
+
     }
     .cards-container{
         display: grid;
+        margin: auto;
+        row-gap: 1rem;
+        column-gap: 1rem;
         grid-template-columns: repeat(4, 1fr);
         justify-items: center;
+        background-color: violet;
+        max-width: 90rem;
+
     }
 }
